(re)formmating regels toepassen